The default path included resources for some reason from the generator I used. Removing that since the true path doesn't include it. Adding logo color since the generator also didn't add it.

--- a/css/theme.css
+++ b/css/theme.css
@@ -15,7 +15,7 @@
     --primary-50: rgba(12, 84, 73, 0.5);
     --primary-30: rgba(12, 84, 73, 0.3);
     --primary-10: rgba(12, 84, 73, 0.1);
-    --logo: ;
+    --logo: #3d7a67;
     --sidebar-icon: #ffffff;
     --20: #f6fbff;
     --30: #f4f7fa;
